--- a/_posts/20222-05-28-errorTalk.md
+++ b/_posts/20222-05-28-errorTalk.md
@@ -8,8 +8,7 @@
 2. 아이폰 7 여니까 카톡 앱 기능인 대화/미디어 백업 1도 안해놔서 복원없이 카톡이 재시작되어버림
 3. 뒤늦게,!! 아이폰12에가서 “나중에” 탭을 누르며 대화/미디어 백업기능을 사용해보려했는데 
 ”암호화 복원이 안되네~ “ , “ 인증만료되었으니 사용할 수 없다”등의 팝업이뜨면서 할 수가 없음
-
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/905ac559-2e2b-40fb-8e77-b4ca08f6e017/Untitled.png)
+![poster](./errorTalk.png)
 
 해결 방법
 
@@ -33,7 +32,7 @@
 1. 뇌 피셜: PC카카오톡은 대화, 미디어 다 살아있음 이걸로 하면 되겠다!!! 근데 pc카카오톡에서는 대화 백업 기능만 지원!!! (여기서 아.. 대화는 살렸고,,) ❗FAIL❗
 2. 카카오 센터 문의 : [https://cs.kakao.com/](https://cs.kakao.com/)  접속해서 챗봇말고 상담원있음 ❗FAIL❗
     
-    ![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/c16afc60-dd72-4d7d-99d9-40e4800265bf/Untitled.png)
+    ![poster2](./errorTalk2.png)
     
 3. 구글링:  
     1. 나 같은 사람 많아서 마음 진정시키기 😥[https://www.clien.net/service/board/lecture/13004669#comment-head](https://www.clien.net/service/board/lecture/13004669#comment-head)
