Update 아이폰 카톡 백업없이 pc카톡으로 대화 미디어ᄇ 43247ae3521843c49abad1ec7bb1e6e4.md

--- a/_posts/아이폰 카톡 백업없이 pc카톡으로 대화 미디어ᄇ 43247ae3521843c49abad1ec7bb1e6e4.md
+++ b/_posts/아이폰 카톡 백업없이 pc카톡으로 대화 미디어ᄇ 43247ae3521843c49abad1ec7bb1e6e4.md
@@ -9,7 +9,7 @@
 3. 뒤늦게,!! 아이폰12에가서 “나중에” 탭을 누르며 대화/미디어 백업기능을 사용해보려했는데 
 ”암호화 복원이 안되네~ “ , “ 인증만료되었으니 사용할 수 없다”등의 팝업이뜨면서 할 수가 없음
 
-![Untitled](%E1%84%8B%E1%85%A1%E1%84%8B%E1%85%B5%E1%84%91%E1%85%A9%E1%86%AB%20%E1%84%8F%E1%85%A1%E1%84%90%E1%85%A9%E1%86%A8%20%E1%84%87%E1%85%A2%E1%86%A8%E1%84%8B%E1%85%A5%E1%86%B8%E1%84%8B%E1%85%A5%E1%86%B9%E1%84%8B%E1%85%B5%20pc%E1%84%8F%E1%85%A1%E1%84%90%E1%85%A9%E1%86%A8%E1%84%8B%E1%85%B3%E1%84%85%E1%85%A9%20%E1%84%83%E1%85%A2%E1%84%92%E1%85%AA%20%E1%84%86%E1%85%B5%E1%84%83%E1%85%B5%E1%84%8B%E1%85%A5%E1%84%87%2043247ae3521843c49abad1ec7bb1e6e4/Untitled.png)
+![Untitled] (./errorTalk.png)
 
 해결 방법
 
